--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 { date: "2025.4.11", content: "加入段二國文以及第四課學期單" },
                 { date: "2025.4.16", content: "移除段一聽力稿" },
                 { date: "2025.4.17", content: "加入段二聽力稿" },
-                { date: "2025.4.21", content: "Meta認證藍勾勾" },
+                { date: "2025.4.21", content: "Meta認證藍勾勾（不知道會不會過拉）" },
                 
 
             ];
