--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@
                 { date: "2025.4.16", content: "移除段一聽力稿" },
                 { date: "2025.4.17", content: "加入段二聽力稿" },
                 { date: "2025.4.21", content: "Meta認證藍勾勾（不知道會不會過拉）" },
+                { date: "2025.5.2", content: "加入段二國文100字解答" } ,
+                
                 
 
             ];
