修復 JavaScript 語法錯誤，確保 2026 年更新項目能正常顯示

--- a/index.html
+++ b/index.html
@@ -205,7 +205,10 @@
                 { date: "2025.5.2", content: "加入段二國文100字解答" } ,
                 { date: "2025.5.24", content: "推出全新班網" },
                 { date: "2025.9.1", content: "移除部分內容並改善已知錯誤"},
-                { date: "2025.9.1", content: "改善更新日誌的使用體驗，更貼近即將發表的iOS 26正式版Liquid Glass風格" }
+                { date: "2025.9.1", content: "改善更新日誌的使用體驗，更貼近即將發表的iOS 26正式版Liquid Glass風格" },
+                { date: "2025.12.26", content: "提供英文與國文段三範圍解答" },
+                { date: "2026.1.1", content: "2026年更新，本網站最後一次更新新功能，讓你可以快速查看考試時間" },
+
                 
                 
 
